--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 
     <div class="page">
-        
         <aside class="sidebar">
             <h3 style="margin-top: 0;">Contato</h3>
             <div class="contact-item">
@@ -31,8 +30,8 @@
 
             <h3>Competências Técnicas</h3>
             <ul>
-                <li><strong>Linguagens:</strong> C#, Java, Python, C</li>
-                <li><strong>Sistemas:</strong> Linux Zorin OS, Windows</li>
+                <li><strong>Linguagens:</strong> Python, C</li>
+                <li><strong>Sistemas:</strong> Windows, Linux Zorin OS</li>
                 <li><strong>Modelagem:</strong> UML, Diagramas ER</li>
                 <li><strong>Ferramentas:</strong> Astah, brModelo</li>
                 <li><strong>Outros:</strong> POO, Cibersegurança, LGPD</li>
@@ -59,7 +58,7 @@
 
             <h3>Resumo Profissional</h3>
             <p>
-                Estudante do 3º semestre de Análise e Desenvolvimento de Sistemas, em busca da primeira oportunidade na área de tecnologia (Estágio/Júnior). Possuo conhecimentos práticos em linguagens como Python, C, C# e Java, além de forte interesse em modelagem de dados, metodologias ágeis e ambiente open-source. Entusiasta de Inteligência Artificial e Data Science, busco aplicar minha lógica de programação e habilidades analíticas para resolver problemas reais e contribuir com projetos inovadores.
+                Estudante do 3º semestre de Análise e Desenvolvimento de Sistemas, em busca da primeira oportunidade na área de tecnologia (Estágio/Júnior). Possuo conhecimentos práticos em linguagens como Python e C, e atualmente aprofundo meus estudos em C# e Java. Tenho forte interesse em modelagem de dados, metodologias ágeis e ambiente open-source. Entusiasta de Inteligência Artificial e Data Science, busco aplicar minha lógica de programação e habilidades analíticas para resolver problemas reais e contribuir com projetos inovadores.
             </p>
 
             <h3>Projetos Acadêmicos Práticos</h3>
@@ -112,7 +111,7 @@
                 <div class="job-title">Supervisor de Atendimento / Atendente (Diversas Unidades)</div>
                 <div class="date-duration">Julho de 2023 - Outubro de 2024</div>
             </div>
-
+            
         </main>
     </div>
 
